--- a/front-end/src/components/navBar/navBar.css
+++ b/front-end/src/components/navBar/navBar.css
@@ -17,6 +17,15 @@ body {
   text-decoration: none;
 }
 
+.topnav span {
+  color: #f2f2f2;
+  float: left;
+  font-size: 17px;
+  padding: 14px 16px;
+  text-align: center;
+  text-decoration: none;
+}
+
 .topnav a:hover {
   background-color: #ddd;
   color: black;
