chore: modifica arquivo de css para teste

--- a/front-end/src/components/card/products/card.css
+++ b/front-end/src/components/card/products/card.css
@@ -1,19 +1,7 @@
-.box-container {
+.card-buttons-quantity {
+  align-items: center;
+  background-color: #eaf1ef;
   display: flex;
-  flex-wrap: wrap;
-}
-
-.cards-main {
-  border: 1px solid black;
-  border-radius: 4px;
-  margin: 10px;
-}
-
-.cards-products-name {
-  text-align: center;
-}
-
-.cards-products-price {
-  font-size: 18px;
-  text-align: initial;
+  flex-direction: column;
+  padding: 7px;
 }
